# mcplatex-gui

./: .env  .gitignore  CMakeLists.txt  README..md  README.md  latex_packages.txt  main.cpp  main_with_gui.py  pyproject.toml  sync.bat
gui/: MainWindow.py
gui/pages/: AboutPage.py  HomePage.py  PreviewPage.py  SettingPage.py  ValuesPage.py
gui/utils/: ExplorerUtil.py  ScreenSizeUtil.py
gui/widgets/: ImagePreviewLabel.py  ImagesPreviewCard.py  LineNumberTextEditWidget.py  SquareNavigationWidget.py
res/: env_template
scripts/: init_venv.bat  install_latex.bat
src/: .env  agent_config.yaml  agent_setup.py  latex_build_and_preview.py  launcher_file.py  llm_client.py  main.py
src/agents/: __init__.py  cls_generator.py  cls_inspector.py  combined_inspector.py  debugger_agent.py  img_recognizer.py  manual_adjustor.py  semantic_extractor.py  style_analyzer.py  tex_inspector.py  visual_auditor.py
src/config/: sys_config.py
src/gui/: MainWindow.py  test.py
src/gui/pages/: AboutPage.py  DocumentPage.py  HomePage.py  PreviewPage.py  SettingPage.py  TemplatePage.py  ValuesPage.py
src/gui/utils/: ExplorerUtil.py  MessageUtil.py  ScreenSizeUtil.py  ScrollPageUtil.py
src/gui/widgets/: GenericImagesPreviewCard.py  HomeCard.py  (+9 more)
src/schemas/: __init__.py  cls_schema.py  style_schema.py
src/services/: __init__.py  compilation_service.py  generation_service.py  latex_workflow.py  optimization_service.py  work_service.py  workflow_support.py
src/utils/: __init__.py  cls_builder.py  error_util.py  log_util.py  model_config.py  qt_log_bridge.py  settings_manager.py
