[project]
name = "mcplatex-gui"
version = "0.1.0"
description = "mcplatex with gui"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6-fluent-widgets[full]",
    "python-dotenv",
    "uv",
    "httpx[socks]>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "atomic-agents>=2.4.1",
    "black>=25.12.0",
    "dotenv>=0.9.9",
    "pyreadline3",
    "httpx>=0.28.1",
    "instructor>=1.13.0",
    "ipython>=9.8.0",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
